# agentic-rubric-runner

./: .gitignore  .python-version  LICENSE  README.md  app.py  packages.txt  pyproject.toml  requirements-streamlit.txt  requirements-web.txt  requirements.txt  solution.py  validate_grading.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  pages.yml  publish.yml
.streamlit/: config.toml  deploy.toml
aarrr_agent/: __init__.py  acceptance.py  agent.py  attachment_relevance.py  benchmark.py  cli.py  config.py  env.py  errors.py  evidence.py  grader.py  grading_calibration.py  grading_report.py  html_pdf.py  html_report.py  llm.py  md_report_parser.py  pdf_gen.py  phase1_state.py  pipeline.py  report_models.py  reporting.py  retrieval.py  schemas.py  structured_report.py  tools.py  validation.py  web_app.py
aarrr_agent/assets/: executive_report.css
aarrr_agent/templates/: executive_report.html
docs/: agent_scoring_upgrade.md  index.html  streamlit_deploy.md  style.css
docs/development/: README.md
docs/development/iterations/: 0.5.2-gates.md  0.5.2-supervisor-review-response.md  0.5.2.4-web-evidence-policy.md  README.md
fixtures/: TASK.md  adversarial_read_rubric.txt  domain_variant_query.txt  domain_variant_rubrics.json  query.txt  rubrics.json
fixtures/benchmarks/: agent_cases.example.json  agent_cases.json  baseline.json
fonts/: README.md
scripts/: acceptance.sh
tests/: test_acceptance.py  test_agent_loop.py  test_agent_messages.py  test_attachment_relevance.py  test_cli_import.py  test_evidence.py  test_grading_report.py  test_html_report.py  test_path_whitelist.py  test_pdf_gen.py  test_phase1_finalize.py  test_phase1_state_machine.py  test_project_urls.py  test_report_validation.py  test_retrieval.py  test_schemas.py  test_score.py  test_score_recalculate.py  test_structured_report.py  test_trace.py  test_validation_critic.py  test_web_entry.py  test_web_no_public_demo.py
