[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-rubric-runner"
version = "0.5.0"
description = "A lightweight, auditable agent workflow for document-grounded PDF generation and rubric-based evaluation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "openai>=1.30.0",
    "pymupdf>=1.24.0",
    "reportlab>=4.0.0",
    "pydantic>=2.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
    "weasyprint>=62.0",
]

[project.urls]
Homepage = "https://bosprimigenious.github.io/agentic-rubric-runner/"
Repository = "https://github.com/bosprimigenious/agentic-rubric-runner"
PyPI = "https://pypi.org/project/agentic-rubric-runner/"
"Deploy Console" = "https://agentic-rubric-runner.streamlit.app/"

[project.optional-dependencies]
web = ["streamlit>=1.35.0"]
dev = ["pytest>=7.0", "pytest-mock", "black", "ruff", "build>=1.2.0", "streamlit>=1.35.0"]

[project.scripts]
agentic-rubric = "aarrr_agent.cli:main"
aarrr-agent = "aarrr_agent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["aarrr_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
